<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFondo">

    <TextView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cabeceraRutina"
        android:textSize="30sp"
        android:id="@+id/textView2"
        android:layout_gravity="center_horizontal"
    />

    <Button
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/botonCamara"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="20sp"
        android:onClick="camaraQR"
    />

    <ScrollView
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <TableLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:stretchColumns="1"
                android:layout_margin="@dimen/activity_horizontal_margin"

                >

                <TableRow
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ejercicio_1"
                        android:textColor="@color/colorTexto"
                        android:background="@color/colorFondoTexto"
                        android:id="@+id/textView3"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ejercicio_2"
                        android:textColor="@color/colorTexto"
                        android:background="@color/colorFondoTexto"
                        android:id="@+id/textView4"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ejercicio_3"
                        android:textColor="@color/colorTexto"
                        android:background="@color/colorFondoTexto"
                        android:id="@+id/textView5"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ejercicio_4"
                        android:textColor="@color/colorTexto"
                        android:background="@color/colorFondoTexto"
                        android:id="@+id/textView6"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ejercicio_5"
                        android:textColor="@color/colorTexto"
                        android:background="@color/colorFondoTexto"
                        android:id="@+id/textView7"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ejercicio_6"
                        android:textColor="@color/colorTexto"
                        android:background="@color/colorFondoTexto"
                        android:id="@+id/textView8"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ejercicio_7"
                        android:textColor="@color/colorTexto"
                        android:background="@color/colorFondoTexto"
                        android:id="@+id/textView9"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ejercicio_8"
                        android:textColor="@color/colorTexto"
                        android:background="@color/colorFondoTexto"
                        android:id="@+id/textView10"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ejercicio_9"
                        android:textColor="@color/colorTexto"
                        android:background="@color/colorFondoTexto"
                        android:id="@+id/textView11"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        />

                </TableRow>

                <TableRow
                    android:layout_marginBottom="@dimen/activity_vertical_margin"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ejercicio_10"
                        android:textColor="@color/colorTexto"
                        android:background="@color/colorFondoTexto"
                        android:id="@+id/textView12"
                        android:textStyle="bold"
                        android:textSize="30sp"
                        android:textAlignment="center"
                        />

                </TableRow>

            </TableLayout>

        </RelativeLayout>

    </ScrollView>


</LinearLayout>